# cdss-note-aifa

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
Note_AIFA/: .dockerignore  .env.example  Descrizione_progetto_tesi.txt  LIMITATIONS.md  Makefile  README.md  docker-compose.yml
Note_AIFA/.streamlit/: config.toml
Note_AIFA/aifa_rule_engine/: README.md  pyproject.toml
Note_AIFA/aifa_rule_engine/aifa_rule_engine/: __init__.py  _resolve_tv.py
Note_AIFA/aifa_rule_engine/aifa_rule_engine/api/: main.py
Note_AIFA/aifa_rule_engine/aifa_rule_engine/engine/: data_dictionary.py  drug_normalizer.py  evaluator.py  rag_builder.py  rule_loader.py
Note_AIFA/aifa_rule_engine/aifa_rule_engine/logic/: derived_vars.py  three_valued.py
Note_AIFA/aifa_rule_engine/aifa_rule_engine/models/: conditions.py  results.py  rules.py
Note_AIFA/aifa_rule_engine/rules/nota_01/: _catalog.yaml  rules.yaml
Note_AIFA/aifa_rule_engine/rules/nota_13/: _catalog.yaml  rules.yaml
Note_AIFA/aifa_rule_engine/rules/nota_66/: _catalog.yaml  rules.yaml
Note_AIFA/aifa_rule_engine/rules/nota_97/: _catalog.yaml  rules.yaml
Note_AIFA/aifa_rule_engine/tests/: conftest.py  test_api_integration.py  test_catalog_sync_v4.py  test_derived_vars.py  test_drug_normalizer.py  test_evidence_utils.py  test_expression_eval.py  test_kleene_laws.py  test_logical_consistency_l5.py  test_nota_01.py  test_nota_13.py  test_nota_66.py  test_nota_97.py  test_properties.py  test_rule_validation_v4.py  test_startup_validation.py  test_three_valued.py  test_v34_audit_fixes.py
Note_AIFA/data/ground_truth/: nota_01_ground_truth.json  nota_13_ground_truth.json  nota_66_ground_truth.json  nota_97_ground_truth.json
Note_AIFA/demo/: README.md  bake_evaluations.py  data_loader.py  export_cases.py  narrative.py  requirements_demo.txt
Note_AIFA/demo/components/: pdf_view.py
Note_AIFA/docs/: OVERNIGHT_RUNBOOK.md
Note_AIFA/evaluation/: __init__.py  requirements_evaluation.txt
Note_AIFA/rag_pipeline/: ingest.py  ingest_v2.py  ingestion_manifest.json  ingestion_manifest_v2.json  requirements_orchestrator.txt  requirements_rag.txt
Note_AIFA/tools/: apply_excerpt_fixes.py  audit_rules_vs_pdf.py  auto_fix_excerpts.py  compare_m2.py  derive_gold_from_pdf.py  diagnose_m2.sh  dl_nli_model.py  full_cleanroom_v2.sh  generate_clinical_review_packet.py  md_to_pdf.py  restart_and_rerun.sh  run_full_audit_eval.sh  run_full_overnight.sh  run_m2_compare.sh  suggest_verbatim_excerpts.py  update_latex_v2_numbers.py  verify_pdf_integrity.py  verify_thesis_numbers.py
Note_AIFA/webapp/: index.html  package-lock.json  package.json  vite.config.ts
tesi/versione_feedback_integrato/: bibliography_finale.bib  tesi_strutturale.loa  tesi_strutturale.tex
tesi/versione_finale/: bibliography_finale.bib  macros_finale.tex
tesi/versione_intro_aggiornata/: macros_finale.tex  tesi_relatore.loa  tesi_relatore.tex
tesi/versione_round2/: tesi_strutturale.tex
(+560 files in other folders)
